# Usbfixer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTIONS.txt  LICENSE  PRIVACY_FR.md  PRODUCTION-CHECKLIST.md  README.md  RELEASE.md  SECURITY.md  build-release.ps1  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: Debug copy.ps1  Debug.ps1  main.rs
