[package]
name = "usb-fixer"
version = "1.0.0"
edition = "2021"
authors = ["Angel Virion"]
license = "MIT"
description = "USB formatter (FAT32) with write protection removal - Quebec Law 25 compliant"
keywords = ["usb", "format", "fat32", "windows", "diskpart"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
